[gd_scene load_steps=5 format=2]

[ext_resource path="res://Character/GenerateConversation.gd" type="Script" id=1]
[ext_resource path="res://Character/DesireHolder.tscn" type="PackedScene" id=2]
[ext_resource path="res://Character/ResponseGenerator_.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 450, 260 )

[node name="GenerateConversation" type="Node2D"]
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 480, 240 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 30, 20 )
shape = SubResource( 1 )

[node name="HolderNode" type="Node2D" parent="."]

[node name="DesireHolder" parent="HolderNode" instance=ExtResource( 2 )]
position = Vector2( 100, 120 )

[node name="DesireHolder2" parent="HolderNode" instance=ExtResource( 2 )]
position = Vector2( 350, 120 )

[node name="DesireHolder3" parent="HolderNode" instance=ExtResource( 2 )]
position = Vector2( 600, 120 )

[node name="DesireHolder4" parent="HolderNode" instance=ExtResource( 2 )]
position = Vector2( 850, 120 )

[node name="ResponseGenerator" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="ResponseHolder" type="Node2D" parent="."]

[node name="1" type="Position2D" parent="ResponseHolder"]

[node name="2" type="Position2D" parent="ResponseHolder"]

[node name="3" type="Position2D" parent="ResponseHolder"]

[node name="4" type="Position2D" parent="ResponseHolder"]
